--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,13 @@
     <style name="Theme.Project3activity" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="android:statusBarColor">@color/bg_splash</item>
     </style>
+    <style name="Theme.Project3activity.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.Project3activity.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Project3activity.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
     <!--    <style name="SplashScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
